--- a/templates/test.html
+++ b/templates/test.html
@@ -4,7 +4,7 @@
         <title>Git Repo test</title>
     </head>
     <body>
-        <h1>Git World</h1>
+        <h1>Test World</h1>
         <p>Info about git commands</p>
     </body>
 </html>
